src/test/deca/context/invalid/created/Objet/Passe_3/IllegalRValue.deca
// Description:
//    teste un return du mauvais type
// Resultats:
//    IllegalRValue.deca:8:15: Error: Illegal RValue type, got int, expected boolean

class A {
    boolean m() {
        return 3;
    }
}

{

}